# ubel_stratum

./: Cargo.toml  README.md
benches/: lexer_bench.rs
docs/: ubel.ebnf
examples/basic/: hello.strat  variables.strat
examples/tier_demo/: high_tier.strat
src/: lib.rs  main.rs
src/error_management/: diagnostics.rs  error_manager.rs  logger.rs  mod.rs
src/error_management/error_types/: lexical_error.rs  mod.rs
src/lexer/: comment_parser.rs  error.rs  keywords.rs  literals.rs  logos_lexer.rs  mod.rs  operators.rs  string_parser.rs  token.rs
tests/: basic_tokens_test.rs  comment_test.rs  error_recovery_test.rs  string_interpolation_test.rs
tests/lexer/: keywords_test.rs
